src/main/java/mipsasm/MIPSParser.java
// Generated from mipsasm\MIPSParser.g4 by ANTLR 4.9.1
package mipsasm;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MIPSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, MODIFIER_HI=3, MODIFIER_LO=4, MODIFIER_PCREL_HI=5, 
		MODIFIER_PCREL_LO=6, DOT_ATTRIBUTE=7, DOT_ALIGN=8, DOT_EQU=9, DOT_EXTERN=10, 
		DOT_SECTION=11, DOT_GLOBL=12, DOT_GLOBAL=13, DOT_TEXT=14, DOT_TYPE=15, 
		DOT_DATA=16, DOT_BYTE=17, DOT_SPACE=18, DOT_HALF=19, DOT_WEAK=20, DOT_WORD=21, 
		DOT_DWORD=22, DOT_FILE=23, DOT_RODATA=24, DOT_ASCII=25, DOT_ASCIZ=26, 
		DOT_ASCIIZ=27, DOT_SKIP=28, DOT_STRING=29, DOT_OPTION=30, DOT_SIZE=31, 
		DOT_IDENT=32, I_ADD=33, I_ADDI=34, I_ADDIU=35, I_AND=36, I_ANDI=37, I_AUIPC=38, 
		I_BEQ=39, I_BEQZ=40, I_BGE=41, I_BGT=42, I_BLT=43, I_BLE=44, I_BNE=45, 
		I_BNEZ=46, I_CALL=47, I_ECALL=48, I_J=49, I_JR=50, I_JAL=51, I_JALR=52, 
		I_LA=53, I_LD=54, I_LW=55, I_LH=56, I_LB=57, I_LBU=58, I_LI=59, I_LUI=60, 
		I_MUL=61, I_MV=62, I_NOP=63, I_NOT=64, I_OR=65, I_RET=66, I_SLT=67, I_SRAI=68, 
		I_SRLI=69, I_SLLI=70, I_SUB=71, I_SD=72, I_SW=73, I_SH=74, I_SB=75, I_SYSCALL=76, 
		I_WFI=77, I_XORI=78, REG_ZERO_ABI=79, REG_AT_ABI=80, REG_V0_ABI=81, REG_V1_ABI=82, 
		REG_A0_ABI=83, REG_A1_ABI=84, REG_A2_ABI=85, REG_A3_ABI=86, REG_T0_ABI=87, 
		REG_T1_ABI=88, REG_T2_ABI=89, REG_T3_ABI=90, REG_T4_ABI=91, REG_T5_ABI=92, 
		REG_T6_ABI=93, REG_T7_ABI=94, REG_S0_ABI=95, REG_S1_ABI=96, REG_S2_ABI=97, 
		REG_S3_ABI=98, REG_S4_ABI=99, REG_S5_ABI=100, REG_S6_ABI=101, REG_S7_ABI=102, 
		REG_T8_ABI=103, REG_T9_ABI=104, REG_K0_ABI=105, REG_K1_ABI=106, REG_GP_ABI=107, 
		REG_SP_ABI=108, REG_FP_ABI=109, REG_RA_ABI=110, ASTERISK=111, PLUS=112, 
		MINUS=113, PERCENT=114, DOT=115, DOLLAR=116, COLON=117, COMMA=118, OPENING_BRACKET=119, 
		CLOSING_BRACKET=120, NUMERIC=121, HEX_NUMERIC=122, IDENTIFIER=123, WS=124, 
		STRING_LITERAL=125, UNTERMINATED_STRING_LITERAL=126, NEWLINE=127;
	public static final int
		RULE_asm_file = 0, RULE_asm_line = 1, RULE_label = 2, RULE_mnemonic = 3, 
		RULE_params = 4, RULE_param = 5, RULE_offset = 6, RULE_modifier = 7, RULE_expr = 8, 
		RULE_register = 9, RULE_assembler_instruction = 10, RULE_attribute_assembler_instruction = 11, 
		RULE_align_assembler_instruction = 12, RULE_equ_assembler_instruction = 13, 
		RULE_extern_assembler_instruction = 14, RULE_section_definition_assembler_instruction = 15, 
		RULE_globl_assembler_instruction = 16, RULE_global_assembler_instruction = 17, 
		RULE_text_assembler_instruction = 18, RULE_type_assembler_instruction = 19, 
		RULE_data_assembler_instruction = 20, RULE_byte_assembler_instruction = 21, 
		RULE_space_assembler_instruction = 22, RULE_half_assembler_instruction = 23, 
		RULE_weak_assembler_instruction = 24, RULE_word_assembler_instruction = 25, 
		RULE_dword_assembler_instruction = 26, RULE_file_assembler_instruction = 27, 
		RULE_skip_assembler_instruction = 28, RULE_ascii_assembler_instruction = 29, 
		RULE_asciz_assembler_instruction = 30, RULE_asciiz_assembler_instruction = 31, 
		RULE_string_assembler_instruction = 32, RULE_option_assembler_instruction = 33, 
		RULE_size_assembler_instruction = 34, RULE_ident_assembler_instruction = 35, 
		RULE_csv_identifier_list = 36, RULE_csv_numeric_list = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"asm_file", "asm_line", "label", "mnemonic", "params", "param", "offset", 
			"modifier", "expr", "register", "assembler_instruction", "attribute_assembler_instruction", 
			"align_assembler_instruction", "equ_assembler_instruction", "extern_assembler_instruction", 
			"section_definition_assembler_instruction", "globl_assembler_instruction", 
			"global_assembler_instruction", "text_assembler_instruction", "type_assembler_instruction", 
			"data_assembler_instruction", "byte_assembler_instruction", "space_assembler_instruction", 
			"half_assembler_instruction", "weak_assembler_instruction", "word_assembler_instruction", 
			"dword_assembler_instruction", "file_assembler_instruction", "skip_assembler_instruction", 
			"ascii_assembler_instruction", "asciz_assembler_instruction", "asciiz_assembler_instruction", 
			"string_assembler_instruction", "option_assembler_instruction", "size_assembler_instruction", 
			"ident_assembler_instruction", "csv_identifier_list", "csv_numeric_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'*'", "'+'", "'-'", "'%'", "'.'", "'$'", "':'", "','", 
			"'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "MODIFIER_HI", "MODIFIER_LO", 
			"MODIFIER_PCREL_HI", "MODIFIER_PCREL_LO", "DOT_ATTRIBUTE", "DOT_ALIGN", 
			"DOT_EQU", "DOT_EXTERN", "DOT_SECTION", "DOT_GLOBL", "DOT_GLOBAL", "DOT_TEXT", 
			"DOT_TYPE", "DOT_DATA", "DOT_BYTE", "DOT_SPACE", "DOT_HALF", "DOT_WEAK", 
			"DOT_WORD", "DOT_DWORD", "DOT_FILE", "DOT_RODATA", "DOT_ASCII", "DOT_ASCIZ", 
			"DOT_ASCIIZ", "DOT_SKIP", "DOT_STRING", "DOT_OPTION", "DOT_SIZE", "DOT_IDENT", 
			"I_ADD", "I_ADDI", "I_ADDIU", "I_AND", "I_ANDI", "I_AUIPC", "I_BEQ", 
			"I_BEQZ", "I_BGE", "I_BGT", "I_BLT", "I_BLE", "I_BNE", "I_BNEZ", "I_CALL", 
			"I_ECALL", "I_J", "I_JR", "I_JAL", "I_JALR", "I_LA", "I_LD", "I_LW", 
			"I_LH", "I_LB", "I_LBU", "I_LI", "I_LUI", "I_MUL", "I_MV", "I_NOP", "I_NOT", 
			"I_OR", "I_RET", "I_SLT", "I_SRAI", "I_SRLI", "I_SLLI", "I_SUB", "I_SD", 
			"I_SW", "I_SH", "I_SB", "I_SYSCALL", "I_WFI", "I_XORI", "REG_ZERO_ABI", 
			"REG_AT_ABI", "REG_V0_ABI", "REG_V1_ABI", "REG_A0_ABI", "REG_A1_ABI", 
			"REG_A2_ABI", "REG_A3_ABI", "REG_T0_ABI", "REG_T1_ABI", "REG_T2_ABI", 
			"REG_T3_ABI", "REG_T4_ABI", "REG_T5_ABI", "REG_T6_ABI", "REG_T7_ABI", 
			"REG_S0_ABI", "REG_S1_ABI", "REG_S2_ABI", "REG_S3_ABI", "REG_S4_ABI", 
			"REG_S5_ABI", "REG_S6_ABI", "REG_S7_ABI", "REG_T8_ABI", "REG_T9_ABI", 
			"REG_K0_ABI", "REG_K1_ABI", "REG_GP_ABI", "REG_SP_ABI", "REG_FP_ABI", 
			"REG_RA_ABI", "ASTERISK", "PLUS", "MINUS", "PERCENT", "DOT", "DOLLAR", 
			"COLON", "COMMA", "OPENING_BRACKET", "CLOSING_BRACKET", "NUMERIC", "HEX_NUMERIC", 
			"IDENTIFIER", "WS", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
			"NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MIPSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MIPSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Asm_fileContext extends ParserRuleContext {
		public List<Asm_lineContext> asm_line() {
			return getRuleContexts(Asm_lineContext.class);
		}
		public Asm_lineContext asm_line(int i) {
			return getRuleContext(Asm_lineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MIPSParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MIPSParser.NEWLINE, i);
		}
		public Asm_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).enterAsm_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).exitAsm_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MIPSParserVisitor ) return ((MIPSParserVisitor<? extends T>)visitor).visitAsm_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asm_fileContext asm_file() throws RecognitionException {
		Asm_fileContext _localctx = new Asm_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_asm_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(80);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						{
						setState(76);
						asm_line();
						setState(77);
						match(NEWLINE);
						}
						}
						break;
					case 2:
						{
						{
						setState(79);
						match(NEWLINE);
						}
						}
						break;
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(85);
				asm_line();
				}
				break;
			case 2:
				{
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(86);
					match(NEWLINE);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asm_lineContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MIPSParser.COLON, 0); }
		public MnemonicContext mnemonic() {
			return getRuleContext(MnemonicContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Assembler_instructionContext assembler_instruction() {
			return getRuleContext(Assembler_instructionContext.class,0);
		}
		public Asm_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).enterAsm_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).exitAsm_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MIPSParserVisitor ) return ((MIPSParserVisitor<? extends T>)visitor).visitAsm_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asm_lineContext asm_line() throws RecognitionException {
		Asm_lineContext _localctx = new Asm_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_asm_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMERIC || _la==IDENTIFIER) {
				{
				setState(94);
				label();
				setState(95);
				match(COLON);
				}
			}

			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case I_ADD:
			case I_ADDI:
			case I_ADDIU:
			case I_AND:
			case I_ANDI:
			case I_AUIPC:
			case I_BEQ:
			case I_BEQZ:
			case I_BGE:
			case I_BGT:
			case I_BLT:
			case I_BLE:
			case I_BNE:
			case I_BNEZ:
			case I_CALL:
			case I_ECALL:
			case I_J:
			case I_JR:
			case I_JAL:
			case I_JALR:
			case I_LA:
			case I_LD:
			case I_LW:
			case I_LH:
			case I_LB:
			case I_LBU:
			case I_LI:
			case I_LUI:
			case I_MUL:
			case I_MV:
			case I_NOP:
			case I_NOT:
			case I_OR:
			case I_RET:
			case I_SLT:
			case I_SRAI:
			case I_SRLI:
			case I_SLLI:
			case I_SUB:
			case I_SD:
			case I_SW:
			case I_SH:
			case I_SB:
			case I_SYSCALL:
			case I_WFI:
			case I_XORI:
				{
				setState(99);
				mnemonic();
				setState(100);
				params();
				}
				break;
			case DOT_ATTRIBUTE:
			case DOT_ALIGN:
			case DOT_EQU:
			case DOT_EXTERN:
			case DOT_SECTION:
			case DOT_GLOBL:
			case DOT_GLOBAL:
			case DOT_TEXT:
			case DOT_TYPE:
			case DOT_DATA:
			case DOT_BYTE:
			case DOT_SPACE:
			case DOT_HALF:
			case DOT_WEAK:
			case DOT_WORD:
			case DOT_DWORD:
			case DOT_FILE:
			case DOT_ASCII:
			case DOT_ASCIZ:
			case DOT_ASCIIZ:
			case DOT_SKIP:
			case DOT_STRING:
			case DOT_OPTION:
			case DOT_SIZE:
			case DOT_IDENT:
				{
				setState(102);
				assembler_instruction();
				}
				break;
			case EOF:
			case NEWLINE:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MIPSParser.IDENTIFIER, 0); }
		public TerminalNode NUMERIC() { return getToken(MIPSParser.NUMERIC, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MIPSParserVisitor ) return ((MIPSParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==NUMERIC || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MnemonicContext extends ParserRuleContext {
		public TerminalNode I_ADD() { return getToken(MIPSParser.I_ADD, 0); }
		public TerminalNode I_ADDI() { return getToken(MIPSParser.I_ADDI, 0); }
		public TerminalNode I_ADDIU() { return getToken(MIPSParser.I_ADDIU, 0); }
		public TerminalNode I_AND() { return getToken(MIPSParser.I_AND, 0); }
		public TerminalNode I_ANDI() { return getToken(MIPSParser.I_ANDI, 0); }
		public TerminalNode I_AUIPC() { return getToken(MIPSParser.I_AUIPC, 0); }
		public TerminalNode I_BEQ() { return getToken(MIPSParser.I_BEQ, 0); }
		public TerminalNode I_BEQZ() { return getToken(MIPSParser.I_BEQZ, 0); }
		public TerminalNode I_BGE() { return getToken(MIPSParser.I_BGE, 0); }
		public TerminalNode I_BGT() { return getToken(MIPSParser.I_BGT, 0); }
		public TerminalNode I_BLE() { return getToken(MIPSParser.I_BLE, 0); }
		public TerminalNode I_BLT() { return getToken(MIPSParser.I_BLT, 0); }
		public TerminalNode I_BNE() { return getToken(MIPSParser.I_BNE, 0); }
		public TerminalNode I_BNEZ() { return getToken(MIPSParser.I_BNEZ, 0); }
		public TerminalNode I_CALL() { return getToken(MIPSParser.I_CALL, 0); }
		public TerminalNode I_ECALL() { return getToken(MIPSParser.I_ECALL, 0); }
		public TerminalNode I_J() { return getToken(MIPSParser.I_J, 0); }
		public TerminalNode I_JR() { return getToken(MIPSParser.I_JR, 0); }
		public TerminalNode I_JAL() { return getToken(MIPSParser.I_JAL, 0); }
		public TerminalNode I_JALR() { return getToken(MIPSParser.I_JALR, 0); }
		public TerminalNode I_LA() { return getToken(MIPSParser.I_LA, 0); }
		public TerminalNode I_LD() { return getToken(MIPSParser.I_LD, 0); }
		public TerminalNode I_LW() { return getToken(MIPSParser.I_LW, 0); }
		public TerminalNode I_LH() { return getToken(MIPSParser.I_LH, 0); }
		public TerminalNode I_LB() { return getToken(MIPSParser.I_LB, 0); }
		public TerminalNode I_LBU() { return getToken(MIPSParser.I_LBU, 0); }
		public TerminalNode I_LI() { return getToken(MIPSParser.I_LI, 0); }
		public TerminalNode I_LUI() { return getToken(MIPSParser.I_LUI, 0); }
		public TerminalNode I_MUL() { return getToken(MIPSParser.I_MUL, 0); }
		public TerminalNode I_MV() { return getToken(MIPSParser.I_MV, 0); }
		public TerminalNode I_NOP() { return getToken(MIPSParser.I_NOP, 0); }
		public TerminalNode I_NOT() { return getToken(MIPSParser.I_NOT, 0); }
		public TerminalNode I_OR() { return getToken(MIPSParser.I_OR, 0); }
		public TerminalNode I_RET() { return getToken(MIPSParser.I_RET, 0); }
		public TerminalNode I_SLT() { return getToken(MIPSParser.I_SLT, 0); }
		public TerminalNode I_SRAI() { return getToken(MIPSParser.I_SRAI, 0); }
		public TerminalNode I_SRLI() { return getToken(MIPSParser.I_SRLI, 0); }
		public TerminalNode I_SLLI() { return getToken(MIPSParser.I_SLLI, 0); }
		public TerminalNode I_SUB() { return getToken(MIPSParser.I_SUB, 0); }
		public TerminalNode I_SD() { return getToken(MIPSParser.I_SD, 0); }
		public TerminalNode I_SW() { return getToken(MIPSParser.I_SW, 0); }
		public TerminalNode I_SH() { return getToken(MIPSParser.I_SH, 0); }
		public TerminalNode I_SB() { return getToken(MIPSParser.I_SB, 0); }
		public TerminalNode I_SYSCALL() { return getToken(MIPSParser.I_SYSCALL, 0); }
		public TerminalNode I_WFI() { return getToken(MIPSParser.I_WFI, 0); }
		public TerminalNode I_XORI() { return getToken(MIPSParser.I_XORI, 0); }
		public MnemonicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mnemonic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).enterMnemonic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MIPSParserListener ) ((MIPSParserListener)listener).exitMnemonic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MIPSParserVisitor ) return ((MIPSParserVisitor<? extends T>)visitor).visitMnemonic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MnemonicContext mnemonic() throws RecognitionException {
		MnemonicContext _localctx = new MnemonicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mnemonic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !(((((_la - 33)) & ~0x3f) == 0 && ((1L << (_la - 33)) & ((1L << (I_ADD - 33)) | (1L << (I_ADDI - 33)) | (1L << (I_ADDIU - 33)) | (1L << (I_AND - 33)) | (1L << (I_ANDI - 33)) | (1L << (I_AUIPC - 33)) | (1L << (I_BEQ - 33)) | (1L << (I_BEQZ - 33)) | (1L << (I_BGE - 33)) | (1L << (I_BGT - 33)) | (1L << (I_BLT - 33)) | (1L << (I_BLE - 33)) | (1L << (I_BNE - 33)) | (1L << (I_BNEZ - 33)) | (1L << (I_CALL - 33)) | (1L << (I_ECALL - 33)) | (1L << (I_J - 33)) | (1L << (I_JR - 33)) | (1L << (I_JAL - 33)) | (1L << (I_JALR - 33)) | (1L << (I_LA - 33)) | (1L << (I_LD - 33)) | (1L << (I_LW - 33)) | (1L << (I_LH - 33)) | (1L << (I_LB - 33)) | (1L << (I_LBU - 33)) | (1L << (I_LI - 33)) | (1L << (I_LUI - 33)) | (1L << (I_MUL - 33)) | (1L << (I_MV - 33)) | (1L << (I_NOP - 33)) | (1L << (I_NOT - 33)) | (1L << (I_OR - 33)) | (1L << (I_RET - 33)) | (1L << (I_SLT - 33)) | (1L << (I_SRAI - 33)) | (1L << (I_SRLI - 33)) | (1L << (I_SLLI - 33)) | (1L << (I_SUB - 33)) | (1L << (I_SD - 33)) | (1L << (I_SW - 33)) | (1L << (I_SH - 33)) | (1L << (I_SB - 33)) | (1L << (I_SYSCALL - 33)) | (1L << (I_WFI - 33)) | (1L << (I_XORI - 33)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
